--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,14 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/partnerdb
 spring.datasource.username=root
 spring.datasource.password=741123
+#spring.datasource.username=max_s
+#spring.datasource.password = 741123_ms$-d_B
 server.port=8081
 logging.level.root=WARN
-spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.servlet.multipart.max-file-size = 10MB
+#spring.jpa.show-sql: true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
